--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,11 +24,11 @@
     <string name="add_device_title">Add Device</string>
     <string name="add_plug_tips">Plug in the device and confirm \nthat indicator is blinking amber</string>
     <string name="add_wall_switch_tips">Plug in the device and confirm \nthat indicator is blinking red</string>
-    <string name="add_sensor_tips">Keep the device energized and confirm \nthat indicator is blinking amber</string>
-    <string name="not_blinking_amber_tips">My light is not blinking amber</string>
+    <string name="add_sensor_tips">Keep the device energized and confirm \nthat indicator is blinking blue</string>
+    <string name="not_blinking_amber_tips">My light is not blinking blue</string>
     <string name="not_blinking_red_tips">My light is not blinking red</string>
-    <string name="plug_blinking">Indicator blink amber light</string>
-    <string name="wall_switch_blinking">Indicator blink red light</string>
+    <string name="plug_blinking">Indicator blink blue light</string>
+    <string name="wall_switch_blinking">Indicator blink blue light</string>
     <string name="support_wifi_tips">This app supports only 2.4GHz Wi-Fi network.</string>
     <string name="settings">Settings</string>
     <string name="settings_mqtt_device">MQTT settings for device</string>
@@ -39,7 +39,7 @@
     <string name="operation_steps_1_content">Plug the device in power</string>
     <string name="operation_steps_2">Step 2</string>
     <string name="operation_steps_3">Step 3</string>
-    <string name="operation_steps_2_content">Hold the button for 10s until the LED blink amber</string>
+    <string name="operation_steps_2_content">Hold the button for 10s until the LED blink blue</string>
     <string name="wall_switch_operation_steps_2_content">Hold the button for 10s until the LED blink red</string>
     <string name="wall_switch_operation_steps_3_content">Confirm the indicator light is blinking</string>
     <string name="select_device_work_mode">Select Work Mode</string>
@@ -131,7 +131,7 @@
     <string name="device_info_date">Date of Manufacture</string>
     <string name="device_info_name">Device Name</string>
     <string name="device_info_version">Firmware Version</string>
-    <string name="device_info_mac">Device Mac</string>
+    <string name="device_info_mac">Device ID</string>
     <string name="device_info_no_statistics">The device does not have this function</string>
 
     <string name="ensure">OK</string>
